<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" android:id="@+id/dashboardLinearParent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_dashboard"/>
    <Button
            android:text="@string/btn_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnHealth" android:layout_margin="20dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_blank"
            android:ems="10"
            android:id="@+id/apiHealthText" android:layout_margin="20dp" android:textAlignment="center"
            android:editable="false"/>


</LinearLayout>